# ic_rust_poc

./: .gitignore  Cargo.toml  README.md  build_and_test.sh  dfx.json  dfx_deploy.sh  dfx_stop.sh
.github/workflows/: build_and_tests.yml
canister_a/: Cargo.toml
canister_a/src/: inspect_message.rs  lib.rs  main.rs  request.rs
canister_a/tests/: integration_tests.rs
canister_a/tests/utils/: mod.rs  pocket_ic_client.rs  pocket_ic_test_context.rs  state_machine.rs  wasm.rs
canister_b/: Cargo.toml
canister_b/src/: lib.rs  main.rs
just/: build.just  code_check.just  test.just
