[workspace]
members = [
  "canister_a",
  "canister_b",
]
resolver = "3"

[workspace.package]
license = "MIT"
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
candid = { version = "0.10" }
ic-cdk = "0.18"
ic_mple_pocket_ic = "0.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
# wasm32 defaults to `panic=abort`. As it is the only supported mode, setting it manually to `unwind` has no effect for wasm32 builds
panic = "unwind"
debug = false