[package]
name = "canister_a"
version.workspace = true
edition.workspace = true

[dependencies]
candid = { worspace = true }
ic-cdk = { worspace = true }
serde = { worspace = true }

[dev-dependencies]
flate2 = { worspace = true }
futures = { worspace = true }
log = { worspace = true }
once_cell = { worspace = true }
pocket-ic = { worspace = true }
reqwest = { workspace = true, features = [
  "blocking",
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
tokio = { worspace = true }