[package]
name = "canister_a"
version.workspace = true
edition.workspace = true

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
flate2 = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
pocket-ic = { workspace = true }
reqwest = { workspace = true, features = [
  "blocking",
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
tokio = { workspace = true }