[package]
name = "canister_a"
version.workspace = true
edition.workspace = true

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ic_mple_pocket_ic = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }